[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme/theme_gray.tres" type="Theme" id=1]
[ext_resource path="res://font/ui-title.tres" type="DynamicFont" id=2]
[ext_resource path="res://scene/gui/ConfusionMatrixDialog.gd" type="Script" id=3]

[node name="ConfusionMatrixDialog" type="WindowDialog"]
visible = true
margin_right = 500.0
margin_bottom = 200.0
rect_min_size = Vector2( 500, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
resizable = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMargins" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVbox" type="VBoxContainer" parent="MainMargins"]
margin_right = 480.0
margin_bottom = 180.0

[node name="Label" type="Label" parent="MainMargins/MainVbox"]
margin_right = 480.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Confusion Matrix Metrics"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="MainMargins/MainVbox"]
margin_top = 35.0
margin_right = 480.0
margin_bottom = 47.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 3

[node name="MatrixContainer" type="GridContainer" parent="MainMargins/MainVbox"]
margin_top = 51.0
margin_right = 480.0
margin_bottom = 51.0
columns = 4

[node name="HSeparator2" type="HSeparator" parent="MainMargins/MainVbox"]
margin_top = 55.0
margin_right = 480.0
margin_bottom = 67.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 3

[node name="MetricsTextEdit" type="TextEdit" parent="MainMargins/MainVbox"]
margin_top = 71.0
margin_right = 480.0
margin_bottom = 83.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true

[node name="ReverseClassCheckbox" type="CheckBox" parent="MainMargins/MainVbox"]
margin_top = 87.0
margin_right = 480.0
margin_bottom = 116.0
text = "Reverse Class Order"

[node name="VisibleSamplesOnlyCheckbox" type="CheckBox" parent="MainMargins/MainVbox"]
margin_top = 120.0
margin_right = 480.0
margin_bottom = 149.0
pressed = true
text = "Visible Samples Only"

[node name="BottomButtonBar" type="HBoxContainer" parent="MainMargins/MainVbox"]
margin_top = 153.0
margin_right = 480.0
margin_bottom = 180.0
alignment = 2

[node name="SelectTargetBtn" type="Button" parent="MainMargins/MainVbox/BottomButtonBar"]
margin_right = 212.0
margin_bottom = 27.0
text = "Select Target Attribute"

[node name="CenterPadding" type="Control" parent="MainMargins/MainVbox/BottomButtonBar"]
margin_left = 216.0
margin_right = 328.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="RefreshBtn" type="Button" parent="MainMargins/MainVbox/BottomButtonBar"]
margin_left = 332.0
margin_right = 414.0
margin_bottom = 27.0
text = "Refresh"

[node name="CloseBtn" type="Button" parent="MainMargins/MainVbox/BottomButtonBar"]
margin_left = 418.0
margin_right = 480.0
margin_bottom = 27.0
text = "Close"
[connection signal="toggled" from="MainMargins/MainVbox/ReverseClassCheckbox" to="." method="_on_ReverseClassCheckbox_toggled"]
[connection signal="toggled" from="MainMargins/MainVbox/VisibleSamplesOnlyCheckbox" to="." method="_on_VisibleSamplesOnlyCheckbox_toggled"]
[connection signal="pressed" from="MainMargins/MainVbox/BottomButtonBar/SelectTargetBtn" to="." method="_on_SelectTargetBtn_pressed"]
[connection signal="pressed" from="MainMargins/MainVbox/BottomButtonBar/RefreshBtn" to="." method="_on_RefreshBtn_pressed"]
[connection signal="pressed" from="MainMargins/MainVbox/BottomButtonBar/CloseBtn" to="." method="_on_CloseBtn_pressed"]
